package com.example.SE_PA;

public interface CCallback {
    void todo(String str);
}
