@startuml

title __APP's Class Diagram__\n

  namespace com.example.SE_PA {
    class com.example.SE_PA.BuildConfig {
    }
  }
  

  namespace com.example.SE_PA {
    interface com.example.SE_PA.CCallback {
    }
  }
  

  namespace com.example.SE_PA {
    namespace MVC {
      class com.example.SE_PA.MVC.Controller {
      }
    }
  }
  

  namespace com.example.SE_PA {
    namespace MVC {
      namespace Interface {
        interface com.example.SE_PA.MVC.Interface.IController {
        }
      }
    }
  }
  

  namespace com.example.SE_PA {
    namespace MVC {
      namespace Interface {
        interface com.example.SE_PA.MVC.Interface.IModel {
        }
      }
    }
  }
  

  namespace com.example.SE_PA {
    namespace MVC {
      namespace Interface {
        interface com.example.SE_PA.MVC.Interface.IView {
        }
      }
    }
  }
  

  namespace com.example.SE_PA {
    namespace MVC {
      class com.example.SE_PA.MVC.MainActivity {
      }
    }
  }
  

  namespace com.example.SE_PA {
    namespace MVC {
      class com.example.SE_PA.MVC.Model {
      }
    }
  }
  

  namespace com.example.SE_PA {
    class com.example.SE_PA.MainActivity {
    }
  }
  

  namespace com.example.SE_PA {
    class com.example.SE_PA.OkHttpSingleton {
    }
  }
  

  com.example.SE_PA.MVC.Controller .up.|> com.example.SE_PA.MVC.Interface.IController
  com.example.SE_PA.MVC.Controller o-- com.example.SE_PA.MVC.Interface.IModel : model
  com.example.SE_PA.MVC.MainActivity .up.|> com.example.SE_PA.MVC.Interface.IView
  com.example.SE_PA.MVC.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.SE_PA.MVC.MainActivity o-- com.example.SE_PA.MVC.Interface.IController : controller
  com.example.SE_PA.MVC.MainActivity o-- com.example.SE_PA.MVC.Interface.IModel : model
  com.example.SE_PA.MVC.Model .up.|> com.example.SE_PA.MVC.Interface.IModel
  com.example.SE_PA.MVC.Model o-- com.example.SE_PA.MVC.Interface.IView : view
  com.example.SE_PA.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
